# pinokio-agent

./: .gitignore  Cargo.toml  Dockerfile.micro  Dockerfile.micro-runtime  README.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
config/: agent.toml
docs/: ARCHITECTURE.md
hooks/: connection-router.mjs  connection-router.ts
plugin-manifests/: starter-echo.json
plugins/: chat-agent-plugin.mjs  chat-agent-plugin.ts  chat-worker-agent-plugin.mjs  chat-worker-agent-plugin.ts  db-role-agent-plugin.mjs  db-role-agent-plugin.ts  db-router-agent-plugin.mjs  db-router-agent-plugin.ts  echo-plugin.mjs  echo-plugin.ts  explorer-agent-plugin.mjs  explorer-agent-plugin.ts  explorer-read-agent-plugin.mjs  explorer-read-agent-plugin.ts  explorer-write-agent-plugin.mjs  explorer-write-agent-plugin.ts  memory-agent-plugin.mjs  memory-agent-plugin.ts  playwright-agent-plugin.ts  playwright-common.ts  playwright-read-agent-plugin.ts  playwright-unsafe-agent-plugin.ts  playwright-write-agent-plugin.ts  plugin-utils.ts  postgres-agent-plugin.mjs  postgres-agent-plugin.ts  spawn-dev-plugin.mjs  spawn-dev-plugin.ts  telegram-connection.mjs  telegram-connection.ts  unsafe-host-agent-plugin.mjs  unsafe-host-agent-plugin.ts
src/: agent.rs  auth.rs  bootstrap.rs  config.rs  configure.rs  credentials.rs  hooks.rs  llm.rs  main.rs  manager.rs  marketplace.rs  model.rs  oauth_cli.rs  package_ledger.rs  playwright.rs  policy.rs  runtime.rs  transport.rs  ui.rs  ui_pages.rs
tests/: playwright-replay.test.ts
ui/: README.md  package-lock.json  package.json  vite.config.ts
(+184 files in other folders)
