[package]
name = "pinokio-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rcgen = { version = "0.13", features = ["x509-parser"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tempfile = "3"
toml = "0.8"
uuid = { version = "1", features = ["v4", "serde"] }
time = "0.3"
